logs/dag_id=save_city_info_weather/run_id=manual__2024-09-14T18:06:42.982896+00:00/task_id=save_city_info_weather/attempt=1.log
[2024-09-14T18:06:44.207+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:06:42.982896+00:00 [queued]>
[2024-09-14T18:06:44.214+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:06:42.982896+00:00 [queued]>
[2024-09-14T18:06:44.214+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T18:06:44.214+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 6
[2024-09-14T18:06:44.214+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T18:06:44.222+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): save_city_info_weather> on 2024-09-14 18:06:42.982896+00:00
[2024-09-14T18:06:44.225+0000] {standard_task_runner.py:55} INFO - Started process 2681 to run task
[2024-09-14T18:06:44.228+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather', 'save_city_info_weather', 'manual__2024-09-14T18:06:42.982896+00:00', '--job-id', '56', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpw_kb9a38']
[2024-09-14T18:06:44.229+0000] {standard_task_runner.py:83} INFO - Job 56: Subtask save_city_info_weather
[2024-09-14T18:06:44.270+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:06:42.982896+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T18:06:44.319+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather
AIRFLOW_CTX_TASK_ID=save_city_info_weather
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T18:06:42.982896+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T18:06:42.982896+00:00
[2024-09-14T18:06:44.320+0000] {sql.py:253} INFO - Executing: 
            create table if not exists weathers (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                max_temp VARCHAR(50),
                min_temp VARCHAR(50),
                wind VARCHAR(50),
                description VARCHAR(50)
            )
        
[2024-09-14T18:06:44.325+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T18:06:44.491+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T18:06:44.502+0000] {sql.py:364} INFO - Running statement: 
            create table if not exists weathers (
                id INTEGER PRIMARY KEY AUTOINCREMENT,
                max_temp VARCHAR(50),
                min_temp VARCHAR(50),
                wind VARCHAR(50),
                description VARCHAR(50)
            )
        , parameters: None
[2024-09-14T18:06:44.504+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AUTOINCREMENT"
LINE 3:                 id INTEGER PRIMARY KEY AUTOINCREMENT,
                                               ^

[2024-09-14T18:06:44.512+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=save_city_info_weather, task_id=save_city_info_weather, execution_date=20240914T180642, start_date=20240914T180644, end_date=20240914T180644
[2024-09-14T18:06:44.521+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 56 for task save_city_info_weather (syntax error at or near "AUTOINCREMENT"
LINE 3:                 id INTEGER PRIMARY KEY AUTOINCREMENT,
                                               ^
; 2681)
[2024-09-14T18:06:44.533+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T18:06:44.546+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
